--- a/index.html
+++ b/index.html
@@ -3,63 +3,134 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ngo Minh Khang | Portfolio</title>
+    <title>Portfolio | [Tên Của Bạn]</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
-<body class="bg-slate-50 text-slate-900">
+<body class="bg-slate-50 text-slate-900 font-sans selection:bg-blue-100 selection:text-blue-700">
 
     <nav class="fixed w-full z-50 bg-white/80 backdrop-blur-md border-b border-slate-200">
-        <div class="max-w-6xl mx-auto px-4 h-16 flex justify-between items-center">
-            <span class="font-bold text-xl tracking-tighter text-blue-600">NM.KHANG</span>
-            <div class="space-x-8 hidden md:flex font-medium">
+        <div class="max-w-6xl mx-auto px-6 h-16 flex justify-between items-center">
+            <a href="#" class="font-bold text-xl tracking-tighter text-blue-600">RESEARCH.DEV</a>
+            <div class="space-x-8 hidden md:flex font-medium text-sm uppercase tracking-wider">
                 <a href="#about" class="hover:text-blue-600 transition">Giới thiệu</a>
                 <a href="#research" class="hover:text-blue-600 transition">Nghiên cứu</a>
                 <a href="#projects" class="hover:text-blue-600 transition">Dự án</a>
-                <a href="CV.pdf" 
-                   target="_blank" 
-                   class="border border-slate-300 px-6 py-3 rounded-full hover:bg-slate-50 transition inline-block">
-                   <i class="fa-solid fa-file-pdf mr-2"></i> Xem CV của tôi
-                </a>
+                <a href="#publications" class="hover:text-blue-600 transition">Ấn phẩm</a>
             </div>
+            <a href="CV.pdf" target="_blank" class="bg-blue-600 text-white px-5 py-2 rounded-full text-sm font-semibold hover:bg-blue-700 transition shadow-md">
+                Tải CV
+            </a>
         </div>
     </nav>
 
-    <section class="pt-32 pb-20 px-4 bg-gradient-to-b from-blue-50 to-white">
-        <div class="max-w-4xl mx-auto text-center">
-            <h1 class="text-5xl font-extrabold mb-6 bg-clip-text text-transparent bg-gradient-to-r from-blue-600 to-indigo-600">
-                Nghiên cứu & Phát triển AI trong Cơ khí
+    <section id="about" class="pt-32 pb-20 px-6 bg-gradient-to-b from-blue-50 to-white">
+        <div class="max-w-4xl mx-auto text-center" data-aos="fade-up">
+            <span class="inline-block px-3 py-1 bg-blue-100 text-blue-700 rounded-full text-xs font-bold uppercase mb-4">Ph.D. Candidate & Researcher</span>
+            <h1 class="text-5xl md:text-6xl font-extrabold mb-6 bg-clip-text text-transparent bg-gradient-to-r from-slate-900 via-blue-800 to-indigo-900">
+                [Tên của bạn]
             </h1>
-            <p class="text-xl text-slate-600 mb-8">
-                Ph.D. Candidate @ Hanyang University | Computer Vision | Robotics
+            <p class="text-xl text-slate-600 mb-10 leading-relaxed max-w-2xl mx-auto">
+                Chuyên gia về <strong>Computer Vision</strong> và <strong>Robotics</strong> tại [Tên Lab/Trường học]. 
+                Đam mê ứng dụng AI vào giải quyết các bài toán kỹ thuật thực tế.
             </p>
             <div class="flex justify-center gap-4">
-                <a href="#contact" class="bg-blue-600 text-white px-6 py-3 rounded-full hover:bg-blue-700 transition shadow-lg">Liên hệ với tôi</a>
-                <a href="#" class="border border-slate-300 px-6 py-3 rounded-full hover:bg-slate-50 transition">Tải CV (PDF)</a>
+                <a href="#contact" class="px-8 py-3 rounded-xl bg-slate-900 text-white font-semibold hover:bg-slate-800 transition">Liên hệ</a>
+                <div class="flex items-center gap-4 ml-4 border-l pl-8 border-slate-200 text-2xl text-slate-400">
+                    <a href="#" class="hover:text-blue-600 transition"><i class="fa-brands fa-github"></i></a>
+                    <a href="#" class="hover:text-blue-600 transition"><i class="fa-brands fa-linkedin"></i></a>
+                </div>
             </div>
         </div>
     </section>
 
-    <section id="research" class="py-20 max-w-6xl mx-auto px-4">
-        <h2 class="text-3xl font-bold mb-12 text-center">Lĩnh vực nghiên cứu</h2>
-        <div class="grid md:grid-cols-3 gap-8">
-            <div class="p-6 bg-white rounded-2xl shadow-sm border border-slate-100 hover:shadow-md transition">
-                <i class="fa-solid fa-microscope text-3xl text-blue-500 mb-4"></i>
-                <h3 class="font-bold text-xl mb-2">Computer Vision</h3>
-                <p class="text-slate-600">Phân đoạn hình ảnh (Segmentation) cho vật liệu vải và hạt bột.</p>
+    <section id="research" class="py-24 max-w-6xl mx-auto px-6">
+        <h2 class="text-3xl font-bold mb-16 text-center" data-aos="fade-up">Lĩnh vực nghiên cứu</h2>
+        <div class="grid md:grid-cols-3 gap-10">
+            <div class="group p-8 bg-white rounded-3xl shadow-sm border border-slate-100 hover:border-blue-200 hover:shadow-xl hover:shadow-blue-500/5 transition-all duration-300" data-aos="fade-up" data-aos-delay="100">
+                <div class="w-12 h-12 bg-blue-50 text-blue-600 rounded-xl flex items-center justify-center mb-6 group-hover:bg-blue-600 group-hover:text-white transition-colors">
+                    <i class="fa-solid fa-camera-retro text-xl"></i>
+                </div>
+                <h3 class="font-bold text-xl mb-3 text-slate-800">Computer Vision</h3>
+                <p class="text-slate-500 text-sm leading-relaxed">Phân đoạn hình ảnh (Segmentation) đa kênh, nhận diện hành động và xử lý ảnh y tế chất lượng cao.</p>
             </div>
-            <div class="p-6 bg-white rounded-2xl shadow-sm border border-slate-100 hover:shadow-md transition">
-                <i class="fa-solid fa-robot text-3xl text-indigo-500 mb-4"></i>
-                <h3 class="font-bold text-xl mb-2">Robotics</h3>
-                <p class="text-slate-600">Tối ưu hóa khả năng gắp vật thể mềm và điều khiển robot thông minh.</p>
+            <div class="group p-8 bg-white rounded-3xl shadow-sm border border-slate-100 hover:border-indigo-200 hover:shadow-xl hover:shadow-indigo-500/5 transition-all duration-300" data-aos="fade-up" data-aos-delay="200">
+                <div class="w-12 h-12 bg-indigo-50 text-indigo-600 rounded-xl flex items-center justify-center mb-6 group-hover:bg-indigo-600 group-hover:text-white transition-colors">
+                    <i class="fa-solid fa-robot text-xl"></i>
+                </div>
+                <h3 class="font-bold text-xl mb-3 text-slate-800">Robotics</h3>
+                <p class="text-slate-500 text-sm leading-relaxed">Tối ưu hóa các hệ thống gắp nhả thông minh, điều khiển motor chính xác và tích hợp cảm biến 3D.</p>
             </div>
-            <div class="p-6 bg-white rounded-2xl shadow-sm border border-slate-100 hover:shadow-md transition">
-                <i class="fa-solid fa-bone text-3xl text-emerald-500 mb-4"></i>
-                <h3 class="font-bold text-xl mb-2">Medical AI</h3>
-                <p class="text-slate-600">Dự đoán mật độ xương (BMD) từ ảnh X-ray bằng Deep Learning.</p>
+            <div class="group p-8 bg-white rounded-3xl shadow-sm border border-slate-100 hover:border-emerald-200 hover:shadow-xl hover:shadow-emerald-500/5 transition-all duration-300" data-aos="fade-up" data-aos-delay="300">
+                <div class="w-12 h-12 bg-emerald-50 text-emerald-600 rounded-xl flex items-center justify-center mb-6 group-hover:bg-emerald-600 group-hover:text-white transition-colors">
+                    <i class="fa-solid fa-brain text-xl"></i>
+                </div>
+                <h3 class="font-bold text-xl mb-3 text-slate-800">Medical AI</h3>
+                <p class="text-slate-500 text-sm leading-relaxed">Ứng dụng Deep Learning trong dự đoán mật độ xương và lập kế hoạch điều trị chỉnh nha tự động.</p>
             </div>
         </div>
     </section>
 
-    </body>
+    <section id="projects" class="py-24 bg-slate-900 text-white px-6">
+        <div class="max-w-6xl mx-auto">
+            <h2 class="text-3xl font-bold mb-16 text-center" data-aos="fade-up">Dự án tiêu biểu</h2>
+            <div class="grid md:grid-cols-2 gap-8">
+                <div class="bg-slate-800/50 rounded-2xl overflow-hidden border border-slate-700 hover:border-blue-500/50 transition" data-aos="fade-right">
+                    <div class="h-48 bg-slate-700 flex items-center justify-center text-slate-500 italic">
+                        [Hình ảnh dự án segmentation]
+                    </div>
+                    <div class="p-8">
+                        <h3 class="font-bold text-xl mb-2 italic tracking-wide text-blue-400">Fabric & Powder Segmentation</h3>
+                        <p class="text-slate-400 text-sm mb-6">Sử dụng dữ liệu 9 kênh từ camera Zivid để phân đoạn chính xác các hạt bột và vật liệu vải mềm.</p>
+                        <div class="flex gap-2">
+                            <span class="px-3 py-1 bg-slate-700 rounded-md text-xs">PyTorch</span>
+                            <span class="px-3 py-1 bg-slate-700 rounded-md text-xs">OpenCV</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-slate-800/50 rounded-2xl overflow-hidden border border-slate-700 hover:border-blue-500/50 transition" data-aos="fade-left">
+                    <div class="h-48 bg-slate-700 flex items-center justify-center text-slate-500 italic">
+                        [Hình ảnh dự án gesture recognition]
+                    </div>
+                    <div class="p-8">
+                        <h3 class="font-bold text-xl mb-2 italic tracking-wide text-blue-400">Hand Gesture System</h3>
+                        <p class="text-slate-400 text-sm mb-6">Hệ thống nhận diện cử chỉ tay thời gian thực tích hợp vào nền tảng tương tác thông minh SoulCube.</p>
+                        <div class="flex gap-2">
+                            <span class="px-3 py-1 bg-slate-700 rounded-md text-xs">MediaPipe</span>
+                            <span class="px-3 py-1 bg-slate-700 rounded-md text-xs">Python</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="publications" class="py-24 max-w-4xl mx-auto px-6 font-serif">
+        <h2 class="text-3xl font-bold mb-12 text-center font-sans" data-aos="fade-up">Ấn phẩm khoa học</h2>
+        <div class="space-y-8">
+            <div class="p-6 border-l-4 border-blue-600 bg-white shadow-sm" data-aos="fade-up">
+                <p class="text-lg leading-relaxed text-slate-800 italic">
+                    "Data-driven vision and FEM-based sequential optimization for robotic fabric gripping..."
+                </p>
+                <p class="text-sm text-slate-500 mt-2 font-sans uppercase tracking-widest">
+                    IEEE Big Data 2025 | Robotics and Autonomous Systems Journal
+                </p>
+            </div>
+            </div>
+    </section>
+
+    <footer id="contact" class="py-12 border-t border-slate-200 text-center">
+        <p class="text-slate-500 text-sm mb-4">© 2026 - Designed and Coded by [Tên của bạn]</p>
+        <div class="flex justify-center gap-6 text-xl text-slate-400">
+            <a href="mailto:email@example.com" class="hover:text-blue-600 transition"><i class="fa-solid fa-envelope"></i></a>
+            <a href="#" class="hover:text-blue-600 transition"><i class="fa-brands fa-linkedin"></i></a>
+        </div>
+    </footer>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init({ duration: 1000, once: true });
+    </script>
+</body>
 </html>
