--- a/index.html
+++ b/index.html
@@ -74,8 +74,15 @@
             </div>
             <div class="relative pl-8 border-l-2 border-slate-200" data-aos="fade-left" data-aos-delay="100">
                 <div class="absolute -left-[9px] top-0 w-4 h-4 bg-slate-300 rounded-full"></div>
-                <h3 class="text-2xl font-bold italic text-slate-800 uppercase">IDEA Technology Corp.</h3>
-                <p class="text-slate-500 font-semibold mb-4 text-sm uppercase tracking-wider">Mechanical Design Intern | Jun 2023 – Aug 2023</p>
+                <div class="flex flex-col md:flex-row md:justify-between md:items-start mb-4">
+                    <div>
+                        <h3 class="text-2xl font-bold italic text-slate-800 uppercase">IDEA Technology Corp.</h3>
+                        <p class="text-slate-500 font-semibold text-sm uppercase tracking-wider">Mechanical Design Intern | Jun 2023 – Aug 2023</p>
+                    </div>
+                    <a href="https://ideagroupvn.com/vi/" target="_blank" class="mt-2 md:mt-0 text-xs font-bold text-slate-500 hover:text-blue-600 flex items-center gap-1 border border-slate-200 px-3 py-1 rounded-full bg-white transition shadow-sm">
+                        <i class="fa-solid fa-building"></i> Company Website
+                    </a>
+                </div>
                 <p class="text-slate-600 text-sm italic">Designed a 174-component sheet forming machine based on MISUMI standards. Internship score: <strong>9/10</strong>.</p>
             </div>
         </div>
@@ -151,10 +158,12 @@
 
     <footer class="py-12 border-t border-slate-200 text-center bg-white">
         <p class="text-slate-600 text-sm font-bold">© 2026 - Ngo Minh Khang | Hanyang University</p>
-        <div class="flex justify-center gap-4 mt-4">
-            <a href="https://www.hanyang.ac.kr" target="_blank" class="text-[10px] text-slate-400 hover:text-blue-600 uppercase font-bold tracking-widest">University Website</a>
+        <div class="flex flex-wrap justify-center gap-4 mt-4">
+            <a href="https://www.hanyang.ac.kr" target="_blank" class="text-[10px] text-slate-400 hover:text-blue-600 uppercase font-bold tracking-widest">University</a>
             <span class="text-slate-200">|</span>
             <a href="http://champ.hanyang.ac.kr" target="_blank" class="text-[10px] text-slate-400 hover:text-blue-600 uppercase font-bold tracking-widest">CHAMP's Lab</a>
+            <span class="text-slate-200">|</span>
+            <a href="https://ideagroupvn.com/vi/" target="_blank" class="text-[10px] text-slate-400 hover:text-blue-600 uppercase font-bold tracking-widest">IDEA Group</a>
         </div>
     </footer>
 
