Fix HTML list item closing tag

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     </a>
                 </div>
                 <ul class="list-disc list-outside ml-4 space-y-3 text-slate-600 text-sm">
-                    <li>Designed a 174-component sheet forming machine based on MISUMI standards. Internship score: <strong>9/10</strong>.<li>
+                    <li>Designed a 174-component sheet forming machine based on MISUMI standards. Internship score: <strong>9/10</strong>.</li>
                 </ul>
             </div>
         </div>
