--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         </div>
                         <a href="https://doi.org/10.1016/j.robot.2026.105349" target="_blank" class="text-[10px] bg-blue-100 text-blue-700 px-3 py-1 rounded font-bold hover:bg-blue-600 hover:text-white transition uppercase"><i class="fa-solid fa-link"></i> DOI Link</a>
                     </div>
-                    <h4 class="text-xl font-bold mb-2 italic">"Vision-guided gripping process with minimizing folding for flexible fabric materials..."</h4>
+                    <h4 class="text-xl font-bold mb-2 italic">"Vision-guided gripping process with minimizing folding for flexible fabric materials by integrating a sequential optimization algorithm and FEM analysis."</h4>
                     <p class="text-slate-600 text-sm italic font-sans">Robotics and Autonomous Systems, Vol. 198.</p>
                 </div>
                 <div class="group p-6 bg-white rounded-2xl border border-slate-200 shadow-sm" data-aos="fade-up">
@@ -133,7 +133,7 @@
                         <span class="text-slate-500 font-bold text-sm">2025</span>
                         <a href="https://doi.org/10.32508/stdjet.v8i2.1445" target="_blank" class="text-[10px] bg-slate-100 text-slate-700 px-3 py-1 rounded font-bold hover:bg-slate-600 hover:text-white transition uppercase"><i class="fa-solid fa-link"></i> DOI Link</a>
                     </div>
-                    <h4 class="text-xl font-bold mb-2 italic">"Investigation of factors affecting the channel sealing processing mode of microfluidic chips..."</h4>
+                    <h4 class="text-xl font-bold mb-2 italic">"Investigation of factors affecting the channel sealing processing mode of microfluidic chips using spin coating technology."</h4>
                     <p class="text-slate-600 text-sm italic font-sans">VNUHCM Journal of Engineering and Technology, 8(2).</p>
                 </div>
             </div>
@@ -143,17 +143,26 @@
             <h3 class="text-sm font-bold text-indigo-600 uppercase tracking-[0.2em] mb-8 border-l-4 border-indigo-600 pl-4 italic">Conference Proceedings</h3>
             <div class="space-y-8">
                 <div class="group p-6 bg-slate-900 text-white rounded-2xl border border-slate-700 hover:border-indigo-400 transition" data-aos="fade-up">
-                    <span class="text-indigo-400 font-bold text-sm">2025</span>
+                    <div class="flex justify-between items-start mb-2">
+                        <div class="flex items-center gap-2">
+                            <span class="text-indigo-400 font-bold text-sm uppercase">2025</span>
+                            <span class="bg-indigo-500/20 text-indigo-300 text-[10px] px-2 py-0.5 rounded-full font-bold uppercase border border-indigo-500/30">CORE A / Top-tier</span>
+                        </div>
+                    </div>
                     <h4 class="text-xl font-bold mb-2 italic">"Data-driven vision and FEM-based sequential optimization for fold-minimized robotic fabric gripping"</h4>
-                    <p class="text-slate-400 text-sm uppercase text-xs font-bold">IEEE International Conference on Big Data 2025</p>
+                    <p class="text-slate-400 text-sm uppercase text-xs font-bold font-sans">2025 IEEE International Conference on Big Data</p>
                 </div>
+        
                 <div class="group p-6 bg-slate-900 text-white rounded-2xl border border-slate-700 hover:border-indigo-400 transition" data-aos="fade-up">
                     <div class="flex justify-between items-start mb-2">
-                        <span class="text-slate-400 font-bold text-sm">2024</span>
-                        <a href="https://doi.org/10.1007/978-3-031-90629-9_37" target="_blank" class="text-[10px] bg-amber-400 text-slate-900 px-3 py-1 rounded font-bold hover:bg-white transition uppercase">Best Paper Award</a>
+                        <div class="flex items-center gap-2">
+                            <span class="text-slate-400 font-bold text-sm uppercase">2024</span>
+                            <span class="bg-amber-400 text-slate-900 text-[10px] px-2 py-0.5 rounded-full font-bold uppercase">Best Paper Award</span>
+                        </div>
+                        <a href="https://doi.org/10.1007/978-3-031-90629-9_37" target="_blank" class="text-[10px] bg-white/10 text-white px-3 py-1 rounded font-bold hover:bg-white hover:text-slate-900 transition uppercase"><i class="fa-solid fa-link"></i> DOI Link</a>
                     </div>
-                    <h4 class="text-xl font-bold mb-2 italic">"Structural Modifications for Vibration-Assisted Spin Coating..."</h4>
-                    <p class="text-slate-400 text-sm uppercase text-xs font-bold">ICRESM 2024, Springer Nature</p>
+                    <h4 class="text-xl font-bold mb-2 italic">"Structural Modifications for Vibration-Assisted SpinCoating: Enhancing Coating Thickness Uniformity"</h4>
+                    <p class="text-slate-400 text-sm uppercase text-xs font-bold font-sans">ICRESM 2024, Springer Nature</p>
                 </div>
             </div>
         </div>
